fixed navbar z-index

--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 nav {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -10,6 +10,7 @@ nav {
     justify-content: space-between;
     background-color: #21201f;
     height: 50px;
+    z-index: 5000;
 }
 
 #navbar {
